# minizeke

./: .env.example  .gitignore  Cargo.toml  README.md  assets.toml  deployment.testnet.json  faucet.store.testnet.sqlite3  history.testnet.sqlite3  history.testnet.sqlite3-shm  history.testnet.sqlite3-wal  pool.store.testnet.sqlite3  simulate.store.sqlite3.setup.0  simulate.store.sqlite3.setup.1  simulate.store.sqlite3.setup.10  simulate.store.sqlite3.setup.100  simulate.store.sqlite3.setup.101  simulate.store.sqlite3.setup.102  simulate.store.sqlite3.setup.103  simulate.store.sqlite3.setup.104  simulate.store.sqlite3.setup.105  simulate.store.sqlite3.setup.106  simulate.store.sqlite3.setup.107  simulate.store.sqlite3.setup.108  simulate.store.sqlite3.setup.109  simulate.store.sqlite3.setup.11  simulate.store.sqlite3.setup.110  simulate.store.sqlite3.setup.111  simulate.store.sqlite3.setup.112  simulate.store.sqlite3.setup.113  simulate.store.sqlite3.setup.114  simulate.store.sqlite3.setup.115  simulate.store.sqlite3.setup.118  simulate.store.sqlite3.setup.12  simulate.store.sqlite3.setup.13  simulate.store.sqlite3.setup.14  simulate.store.sqlite3.setup.15  simulate.store.sqlite3.setup.16  simulate.store.sqlite3.setup.17  simulate.store.sqlite3.setup.18  simulate.store.sqlite3.setup.19  (+89 more)
.cursor/: scratchpad.md
asm/: pool.masm
demo/storage_map_key_limit/: README.md  main.rs
docs/: architecture.md  remediation-runbook.md  schemas.md
masm/accounts/: operator.masm  pool.masm  vault.masm
masm/lib/: asset_utils.masm  common.masm  math.masm  output_note_utils.masm  storage_utils.masm
masm/notes/: ADD_POOL.masm  CHECKPOINT.masm  DEPOSIT.masm  FUND.masm  INIT_REDEEM.masm  REDEEM.masm  REGISTER.masm  WITHDRAW.masm
simulation_stores/: simulate.store.sqlite3.setup.0  simulate.store.sqlite3.setup.1  simulate.store.sqlite3.setup.10  simulate.store.sqlite3.setup.11  simulate.store.sqlite3.setup.12  simulate.store.sqlite3.setup.13  simulate.store.sqlite3.setup.14  simulate.store.sqlite3.setup.15  simulate.store.sqlite3.setup.16  simulate.store.sqlite3.setup.17  simulate.store.sqlite3.setup.18  simulate.store.sqlite3.setup.19  simulate.store.sqlite3.setup.2  simulate.store.sqlite3.setup.20  simulate.store.sqlite3.setup.21  simulate.store.sqlite3.setup.22  simulate.store.sqlite3.setup.23  simulate.store.sqlite3.setup.24  simulate.store.sqlite3.setup.25  simulate.store.sqlite3.setup.26  simulate.store.sqlite3.setup.27  simulate.store.sqlite3.setup.28  simulate.store.sqlite3.setup.29  simulate.store.sqlite3.setup.3  simulate.store.sqlite3.setup.30  simulate.store.sqlite3.setup.31  simulate.store.sqlite3.setup.32  simulate.store.sqlite3.setup.33  simulate.store.sqlite3.setup.34  simulate.store.sqlite3.setup.35  simulate.store.sqlite3.setup.36  simulate.store.sqlite3.setup.37  simulate.store.sqlite3.setup.38  simulate.store.sqlite3.setup.39  simulate.store.sqlite3.setup.4  simulate.store.sqlite3.setup.40  simulate.store.sqlite3.setup.41  simulate.store.sqlite3.setup.42  simulate.store.sqlite3.setup.43  simulate.store.sqlite3.setup.44  (+61 more)
simulation_stores/keystore/: key_index.json
src/: analytics.rs  analytics_store.rs  api.rs  assembly_utils.rs  asset_config.rs  asset_utils.rs  auth.rs  curve.rs  deployment.rs  execution.rs  execution_script.rs  execution_store.rs  faucet.rs  fee_store.rs  finality_observer.rs  history.rs  ingress.rs  intent.rs  lib.rs  lp.rs  lp_store.rs  main.rs  market.rs  miden_env.rs  miden_execution.rs  nonce_window.rs  note.rs  operator.rs  oracle_sse.rs  order.rs  pool.rs  pool_manager.rs  pool_registry.rs  price.rs  processing.rs  serde.rs  service_auth.rs  store.rs  test_utils.rs  user.rs  (+1 more)
src/fee/: config.rs  curve.rs  http.rs  mod.rs  oracle.rs  policy.rs  volatility.rs
src/message_broker/: message_broker.rs  messages.rs  mod.rs
src/simulate/: api.rs  config.rs  metrics.rs  mod.rs  oracle.rs  trader.rs  transfer.rs  ws.rs
src/websocket/: connection_manager.rs  handlers.rs  mod.rs  oracle_throttle.rs
tests/: faucet_batch_mint.rs  remediation_harness.rs  swap.rs  vault.rs  vault_pool.rs
