[package]
name = "minizeke"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
miden-assembly = "0.23"
miden-client = { version = "0.15", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.15" }
miden-core = "0.23"
miden-protocol = { version = "0.15.3", default-features = false, features = [
  "testing",
] }
miden-standards = "0.15.3"
miden-tx = "0.15.3"
rand = { version = "0.9" }
tokio = { version = "1.46", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
incremental = true
codegen-units = 256

[profile.dev.package.miden-agglayer]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-block-prover]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-client]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-client-sqlite-store]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-debug]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-remote-prover-client]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-standards]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-testing]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-tx]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-tx-batch-prover]
opt-level = 3
debug-assertions = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
