[package]
name = "minizeke"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.4", features = ["macros", "tokio", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.2.1"
dotenv = "0.15.0"
futures-util = "0.3.31"
miden-assembly = "0.23"
miden-client = { version = "0.15", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.15" }
miden-core = "0.23"
miden-protocol = { version = "0.15.3", default-features = false, features = [
  "testing",
] }
miden-standards = "0.15.3"
miden-tx = "0.15.3"
rand = { version = "0.9" }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.46", features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = "0.1"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.0", features = ["serde", "v4"] }

[profile.dev]
incremental = true
codegen-units = 256

[profile.dev.package.miden-agglayer]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-block-prover]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-client]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-client-sqlite-store]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-debug]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-remote-prover-client]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-standards]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-testing]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-tx]
opt-level = 3
debug-assertions = false

[profile.dev.package.miden-tx-batch-prover]
opt-level = 3
debug-assertions = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
